Touchscreens without dimensions not mapped
Apparently one regression from previous g-s-d digitizer mapping is that it breaks on touchscreens that do not report the device physical size. Eg. lacking this in sudo libinput list-devices
:
Size: 252x172mm
Such devices fall through all the heuristics and end up unmapped. A possibly wrong mapping is better than no mapping at all, as those are typically low-range devices (i.e. unlikely to ship in your expensive external touchscreen) it seems relatively sane to resort to the builtin panel for those.